progressbar text alignment fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -182,15 +182,14 @@ nav.navbar.navbar-static-top {
 }
 .progress-label {
     position: absolute;
-    left: 15%;
     top: 4px;
+    width: 100%;
+    height: 100%;
     // font-weight: bold;
     // text-shadow: 1px 1px 0 #fff;
     color: white;
     font-size: 20px;
-    @media(min-width: 750px) {
-        left:30%;
-    }
+    text-align: center;
 }
 .ui-slider-handle {
     display: none;
